[package]
name = "nuity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
directories = "4.0.1"
serde = "1.0.145"
serde_derive = "1.0.145"
toml = "0.5.9"
